--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
         <h1>Odin Recipes</h1>
 
+        <ul>
+            <li><a href="./recipes/pistachio_salmon.html">Pistachio Crusted Salmon</a></li>
+
+        </ul>
+
     </body>
 
 </html>
