Add recipe page content

--- a/recipes/pistachio_salmon.html
+++ b/recipes/pistachio_salmon.html
@@ -13,6 +13,57 @@
 
         <h1>Pistachio Crusted Salmon</h1>
 
+        <img src="../images/pistachio_salmon.jpg" width=608" height="405">
+
+        <p>
+
+            This delicious dish combines brings the seas to the trees. A bold approach to a traditonal dish contains
+            <br> a crisp, refreshing elegance of the tradtional salmon in mix of the crunch of the hearty pistachio
+
+        </p>
+
+        <p> 
+
+            Follow the recipe for a delicious time.
+            As well, please care for following the directions at <br> heart. For best results, cook with enthusasim. 
+            
+        </p>
+
+        <h3> Ingredients </h3>
+
+            <ul>
+                <li>¼ cup crushed pistachios</li>
+                <li>2 tablespoons panko bread crumbs</li>
+                <li>1 tablespoon grated Parmesan cheese</li>
+                <li>1 tablespoon butter, melted</li>
+                <li>4 (6 ounce) fillets salmon with skin, center cut</li>
+                <li>salt and ground black pepper to taste</li>
+                <li>2 tablespoons olive oil</li>
+                <li>1 tablespoon Dijon mustard</li>
+                <li>4 lemon wedges</li>
+            </ul>
+
+        <h3> Instructions </h3>
+
+            <ol>
+                <li>Preheat the oven to 375 degrees F (190 degrees C)</li>
+                <li>
+                    Combine pistachios, panko bread crumbs, Parmesan cheese, and butter in a small<br>
+                    bowl; stir with a fork until evenly combined
+                   </li>
+                <li>Lightly season salmon fillets with salt and pepper on both sides</li>
+                <li>
+                    Heat olive oil in a large oven-safe skillet over medium heat. Sear salmon fillets, flesh-<br>
+                    sidedown, for 2 to 3 minutes. Turn heat off and flip salmon pieces over so skin side is<br>
+                    down. Brush tops of salmon evenly with Dijon mustard. Top with pistachio mixture,<br>
+                    pressing mixture down onto salmon.</li>
+                <li>
+                    Bake in the preheated oven until salmon flakes easily with a fork, 10 to 12 minutes.<br>
+                    Serve with lemon wedges.</li>
+            </ol>
+
+        <h3><a href="https://www.allrecipes.com/recipe/269394/pistachio-crusted-salmon/">Original Recipe</a></h3>
+        
     </body>
 
 </html>
