Add more recipes

--- a/recipes/pistachio_salmon.html
+++ b/recipes/pistachio_salmon.html
@@ -13,7 +13,7 @@
 
         <h1>Pistachio Crusted Salmon</h1>
 
-        <img src="../images/pistachio_salmon.jpg" width=608" height="405">
+        <img src="../images/pistachio_salmon.jpg" width=608" height="405" alt="A delicious looking plate of salmon">
 
         <p>
 
@@ -63,6 +63,7 @@
             </ol>
 
         <h3><a href="https://www.allrecipes.com/recipe/269394/pistachio-crusted-salmon/">Original Recipe</a></h3>
+        <h3><a href="../index.html">Home page</a></h3>
         
     </body>
 
