--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
         <ul>
             <li><a href="./recipes/pistachio_salmon.html">Pistachio Crusted Salmon</a></li>
-
+            <li><a href="./recipes/pesto_pasta.html">Pesto Pasta</a></li>
+            <li><a href="./recipes/banana_bun.html">Banana Buns</a></li>
         </ul>
 
     </body>
