--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css">
 
     </head>
 
