--- a/recipes/banana_bun.html
+++ b/recipes/banana_bun.html
@@ -6,6 +6,7 @@
 
         <meta charset="UTF-8">
         <title>Banana Buns</title>
+        <link rel="stylesheet" href="../style.css">
 
     </head>
 
