--- a/recipes/pesto_pasta.html
+++ b/recipes/pesto_pasta.html
@@ -6,6 +6,7 @@
 
         <meta charset="UTF-8">
         <title>Pesto Pasta</title>
+        <link rel="stylesheet" href="../style.css">
 
     </head>
 
