--- a/recipes/pistachio_salmon.html
+++ b/recipes/pistachio_salmon.html
@@ -6,6 +6,7 @@
 
         <meta charset="UTF-8">
         <title>Pistachio Crusted Salmon</title>
+        <link rel="stylesheet" href="../style.css">
 
     </head>
 
